libs/extractor/src/snapshots/extractor__tests__extract_responsive_conditional_style_props-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={a === b ? c : [d, e, f, \"2px\"]} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "2px",
                level: 3,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "c",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "d",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 1,
                identifier: "e",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 2,
                identifier: "f",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment51) => <div className={__devupAssignment51?.[0] ?? \"\"} style={{ ...__devupAssignment51?.[1] }} />)(a === b ? ((__devupValue) => [\n\t\"OHbcjd8yxzgcf1oar3\",\n\t{ \"---SUimport_s_x7b__s_x42_ox_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa__x3c__x42_ox_smargin_x3d__x7b_a_s_x3d__x3d__x3d__sb_s_x3f__sc_s_n_s_x5b_d_m_se_m_sf_m_s_q2px_q_x5d__x7d__s_l_x3e__x3b__xa_-ay\": __devupValue },\n\t__devupValue\n])(c) : ((__devupLevel0, __devupLevel1, __devupLevel2, __devupLevel3) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"} ${__devupLevel3?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1],\n\t\t...__devupLevel3?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2],\n\t\t__devupLevel3?.[2]\n\t]\n])(((__devupValue) => [\n\t\"OHbcjd8yxzgcf1oar3\",\n\t{ \"---SUimport_s_x7b__s_x42_ox_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa__x3c__x42_ox_smargin_x3d__x7b_a_s_x3d__x3d__x3d__sb_s_x3f__sc_s_n_s_x5b_d_m_se_m_sf_m_s_q2px_q_x5d__x7d__s_l_x3e__x3b__xa_-ay\": __devupValue },\n\t__devupValue\n])(d), ((__devupValue) => [\n\t\"OHcmokwi6hygf1lno4\",\n\t{ \"---SUimport_s_x7b__s_x42_ox_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa__x3c__x42_ox_smargin_x3d__x7b_a_s_x3d__x3d__x3d__sb_s_x3f__sc_s_n_s_x5b_d_m_se_m_sf_m_s_q2px_q_x5d__x7d__s_l_x3e__x3b__xa_-ay-b\": __devupValue },\n\t__devupValue\n])(e), ((__devupValue) => [\n\t\"OHaxz47llobwv8f1bp\",\n\t{ \"---SUimport_s_x7b__s_x42_ox_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa__x3c__x42_ox_smargin_x3d__x7b_a_s_x3d__x3d__x3d__sb_s_x3f__sc_s_n_s_x5b_d_m_se_m_sf_m_s_q2px_q_x5d__x7d__s_l_x3e__x3b__xa_-ay-c\": __devupValue },\n\t__devupValue\n])(f), ((__devupValue) => [\n\t\"OLmargin-v2px-l3\",\n\t{},\n\t__devupValue\n])(\"2px\")));\n",
}
